--- a/src/pages/biology/Biology.scss
+++ b/src/pages/biology/Biology.scss
@@ -1,9 +1,6 @@
 .container {
   position: relative;
   width: 25%;
-  position: fixed;
-  float: inline-start;
-  margin: 20px;
 }
 
 .image {
@@ -40,4 +37,30 @@
   left: 50%;
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
+}
+
+.menu {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px;
+  background-color: #f0f0f0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.menu button {
+  font-size: 18px;
+  font-weight: bold;
+  width: 20%;
+  padding: 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #f26d21;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.menu button:hover {
+  background-color: #e55313;
 }
